Check _submissions._tcp SRV records during account setup
RFC 8314 adds the _submissions._tcp SRV
lookup, when searching for servers. This lookup is missing from srv_config_lookup_domain_sync().known_services.
RFC 8314 adds the _submissions._tcp SRV
lookup, when searching for servers. This lookup is missing from srv_config_lookup_domain_sync().known_services.